[package]
name = "barnardsstar"
version = "0.1.0"
authors = ["Joe Walker <jwalker@mozilla.com>"]

license = "Apache-2.0"
repository = "https://github.com/joewalker/barnardsstar"
description = "Query Parser for Datomish"
build = "build.rs"
readme = "./README.md"

[dependencies]

[build-dependencies]
peg = "0.4"
